examples/test/testpolicy5065.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5065
  namespace: namespace193
spec:
  podSelector:
    matchLabels:
      key43: value37
      key45: value5
      key38: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value23
          key21: value3
      podSelector:
        matchLabels:
          key43: value15
          key6: value17
          key17: value11
